working on mobile image issues

--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,9 @@ i {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100%;
+  //background-size: 100%;
   //background-size: contain;
-  //background-size: cover;
+  background-size: cover;
 }
 
 .bgimg-1 {
